Improve error handling for ingredients

Parse the amount field when it is entered, and
mark errors early.

https://bugzilla.gnome.org/show_bug.cgi?id=782622